docs(L1): add Spring Boot foundations note and mark track complete
Capture three-layer, JPA/Optional/Servlet basics from reading the schedule module, add existsBySessionId as a derived-query check, and update learning indexes.